# data-engineering-zoomcamp

./: Dockerfile  docker-compose.yaml  homework-1_partB_questions_answer.md  homework-1_questions_answer.md  ingest_data.py  pyproject.toml
homework/: week_1.md  week_2.md  week_3.md  week_4.md  week_5.md  workshop-dlt.md
week-1/docker-sql/: Dockerfile  ingest_data.py
week-1/terraform/: main.tf  variables.tf
week-2-mage/data_exporters/: export_taxi_data.py  taxi_data_to_postgres.py
week-2-mage/data_loaders/: loat_api_data.py
week-2-mage/transformers/: transform_taxi_data.py
week-3/: green_taxi_bigquery.sql  green_taxi_gcs.py
workshop-dlt/: dlt_workshop_homework.py
